--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 # Ignore sass-cache
-/stylesheets/.sass-cache
-
+/css/.sass-cache
+/css/style.css.map
